# simple-aouth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/fb_oauth/: __init__.py  __main__.py
